test/Fail/NoIrrelevance9.agda
{-# OPTIONS --no-irrelevance #-}

postulate .A : Set
